[gd_scene load_steps=15 format=2]

[ext_resource path="res://SnatcherEnemy.gd" type="Script" id=1]
[ext_resource path="res://sound/effects/grunt1.wav" type="AudioStream" id=2]
[ext_resource path="res://sound/effects/grunt7.wav" type="AudioStream" id=3]
[ext_resource path="res://sound/effects/grunt2.wav" type="AudioStream" id=4]
[ext_resource path="res://sound/effects/grunt3.wav" type="AudioStream" id=5]
[ext_resource path="res://sound/effects/grunt4.wav" type="AudioStream" id=6]
[ext_resource path="res://sound/effects/grunt5.wav" type="AudioStream" id=7]
[ext_resource path="res://sound/effects/grunt6.wav" type="AudioStream" id=8]
[ext_resource path="res://sound/effects/attack2.wav" type="AudioStream" id=9]
[ext_resource path="res://sound/effects/attack1.wav" type="AudioStream" id=10]
[ext_resource path="res://sound/effects/attack3.wav" type="AudioStream" id=11]
[ext_resource path="res://sound/effects/attack4.wav" type="AudioStream" id=12]
[ext_resource path="res://graphics/snatcher.png" type="Texture" id=13]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[node name="SnatcherEnemy" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
rotation = -1.5708
polygon = PoolVector2Array( -6, 8, -8, 3, -8, -3, -6.99998, -5.00003, -4.99997, -7.00002, -1.99997, -8.00001, 2.00003, -7.99999, 5.00003, -6.99998, 7.00002, -4.99997, 8, -3, 8, 3, 6, 8, 5, 2, 3, 0, 1, -1, -1, -1, -3, 0, -5, 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 300, 0 )

[node name="Tween" type="Tween" parent="."]

[node name="PlayerDetector" type="Area2D" parent="."]
position = Vector2( 4, 0 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sounds" type="Node2D" parent="."]

[node name="GruntTimer" type="Timer" parent="Sounds"]
autostart = true

[node name="Grunt1" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 2 )
max_distance = 500.0
bus = "SoundEffects"

[node name="Grunt2" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 4 )
max_distance = 500.0
bus = "SoundEffects"

[node name="Grunt3" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 5 )
max_distance = 500.0
bus = "SoundEffects"

[node name="Grunt4" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 6 )
max_distance = 500.0
bus = "SoundEffects"

[node name="Grunt5" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 7 )
max_distance = 500.0
bus = "SoundEffects"

[node name="Grunt6" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 8 )
max_distance = 500.0
bus = "SoundEffects"

[node name="Grunt7" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 3 )
max_distance = 500.0
bus = "SoundEffects"

[node name="Attack1" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 10 )
bus = "SoundEffects"

[node name="Attack2" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 9 )
bus = "SoundEffects"

[node name="Attack3" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 11 )
bus = "SoundEffects"

[node name="Attack4" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 12 )
bus = "SoundEffects"

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 13 )

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="timeout" from="Sounds/GruntTimer" to="." method="_on_GruntTimer_timeout"]
